Refactor handlings of api keys
Signed-off-by: Ino Gamalinda <ino@gamalinda.com>

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
 
         <meta-data
             android:name="io.fabric.ApiKey"
-            android:value="dummy" />
+            android:value="@string/fabric_api_key" />
 
         <activity android:name=".activity.BootActivity">
             <intent-filter>
