--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,19 +24,21 @@ android {
         applicationId "com.gamalinda.android.poc.testing.collapsingtoolbar"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.2"
+        versionCode 3
+        versionName "1.0.3"
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            resValue "string", "fabric_api_key", fabric_api_key
         }
 
         debug {
             minifyEnabled true
             useProguard false
             applicationIdSuffix '.debug'
+            resValue "string", "fabric_api_key", fabric_api_key
         }
     }
 }
